--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   flutter_slidable: ^1.2.0
+  gsheets: ^0.5.0
+  google_sign_in: ^5.2.1
+
+  path_provider: ^2.0.3
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
